# ForwardKinematicsInverseKinematicsCalculation

./: .gitignore  1.1Kinematics_SymPy_DH.ipynb  1.2Kinematics_Robot.ipynb  1.2ParallelRobot_Kinematics.ipynb  1.2parallel_robot.py  2.1visulization.py  2.2STL_Visualization.py  3.1Kalman_Filter.ipynb  3.2Unscented_Kalman_Filter.ipynb  3.3Particle_Filter.ipynb  Kalman_Filter.ipynb  README.md  Robotics_demo.code-workspace  kalman_filter_w_unscented.ipynb  kinematics.py  motion_tracking.ipynb  pyproject.toml  test_parallel_robot.py  test_robot.py  test_urdf_visulization.py
data/stl_files/: EL96Probe.STL  UltrasoundPlane.STL  mesh.json
docs/: robot_struct_design.drawio
docs/dual_quaternion/: ME5701-A0219282A-Wei Kexin-Quaternion and Dual Quaternion in Rigid Body Motion.docx
docs/dual_quaternion/Matlab files/: DQFromEulerVec.m  DQFromQTvec.m  DQFromRealQ.m  DQFromVec.m  Desired.m  DualQuaternion.m  Molynia_orbit.m  QFromEuler.m  QFromVec.m  Quaternion.m  ReferFrame.m  SimpleReferFrame.m  Target.m  VQ.m  dual_quaternion_demo.mlx  dual_quaternion_transformation.m  elliptical_motion.m  fig3_reshow.m  molynia_orbit_radius.mat  plotrffm.m  plotrffm_s.m  plotvec3.m  quaternion_demo.mlx  (+4 more)
lib/: 2d_visualization.py  folder.py  kalman_filter.py
matlab_code/: InverseKinematics.mlx  dh_matrix.m
matlab_code/Matlab/: Autonomous.m  LagrangeEquation.nb  MobileRobot.m  MobileRobot_demo.m  MobileRobot_move.m  MomentofInertia.nb  handshaking.slx  q.mat  simulation.slx
test/: test_STL_Visualization.py  test_quaternion.py  test_robot.py  test_urdf_visulization.py  test_utility.py
(+20 files in other folders)
