[tool.poetry]
name = "robotics-demo"
version = "0.1.0"
description = ""
authors = ["Kexin-Wei-X201 <wkx611@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.4"
matplotlib = "^3.7.4"
sympy = "^1.12"
jupyterlab = "^4.0.12"
black = "^24.2.0"
ipython = "^8.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
